Make all tests run on TravisCI:
  - Remove reportlab invariant, because it's broken (files are not
    invariant anyway) under Python 3.
  - Instead, canonicalize output from reportlab by passing it
    back through pdfrw before comparison.
  - Fix dependencies (reportlab, zlib, unittest2, etc.)
  - Fix MD5 checksums for reportlab output

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,5 +10,8 @@ before_install:
   - "git clone https://github.com/pmaupin/static_pdfs tests/static_pdfs"
 install:
   - "pip install ."
+  - "pip install reportlab || true"
+  - "pip install zlib || true"
+  - "pip install unittest2 || true"
 # command to run tests
-script: "cd tests; py.test"
+script: "cd tests; /usr/bin/env PYTHONPATH=. py.test"
