--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ before_install:
 install:
   - "pip install ."
   - "pip install reportlab || true"
+  - "pip install PyCrypto || true"
   - "pip install zlib || true"
   - "pip install unittest2 || true"
 # command to run tests
