--- a/.travis.yml
+++ b/.travis.yml
@@ -1,20 +1,23 @@
 language: python
+
+os: linux
+
+dist: bionic
+
 python:
-  - "2.6"
-  - "2.7"
-  - "3.3"
-  - "3.4"
-  - "3.5"
-  - "3.6"
-  - "nightly"
-# command to install dependencies
+  - 2.7.17
+  - 3.6.10
+  - 3.7.6
+  - 3.8.2
+  - nightly
+  
 before_install:
-  - "git clone https://github.com/pmaupin/static_pdfs tests/static_pdfs"
+  - pip install --upgrade pip
+  - git clone https://github.com/pmaupin/static_pdfs tests/static_pdfs
+  
 install:
-  - "pip install ."
-  - "pip install reportlab || true"
-  - "pip install PyCrypto || true"
-  - "pip install zlib || true"
-  - "pip install unittest2 || true"
+  - pip install -r requirements.txt
+  - pip install .
+  
 # command to run tests
 script: "cd tests; /usr/bin/env PYTHONPATH=. py.test"
