--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ before_install:
   - git clone https://github.com/pmaupin/static_pdfs tests/static_pdfs
   
 install:
-  - pip install -r requirements.txt
+  - pip install --only-binary=:all: --python-version $TRAVIS_PYTHON_VERSION -r requirements.txt
   - pip install .
   
 # command to run tests
