--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ python:
   - 3.8
 
 before_install:
-  - git clone --depth 1 https://github.com/pmaupin/static_pdfs tests/static_pdfs
+  - git lfs clone --depth 1 https://github.com/pmaupin/static_pdfs tests/static_pdfs
   
 install:
   - pip install pytest pytest-xdist
@@ -23,5 +23,3 @@ script: PYTHONPATH=./tests pytest -n auto
 
 cache:
   pip: true
-  directories:
-  
