--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,9 @@ os: linux
 
 dist: bionic
 
+git:
+  depth: 1
+
 python:
   - 2.7
   - 3.6
@@ -11,7 +14,7 @@ python:
   - 3.8
 
 before_install:
-  - git lfs clone --depth 1 https://github.com/pmaupin/static_pdfs tests/static_pdfs
+  - git clone --depth 1 https://github.com/pmaupin/static_pdfs tests/static_pdfs
   
 install:
   - pip install pytest pytest-xdist
