--- a/.github/workflows/Testing.yml
+++ b/.github/workflows/Testing.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Python setup
         uses: actions/setup-python@v2
         with:
-          python-version: ${{ matrix.python-version }
+          python-version: ${{ matrix.python-version }}
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
