--- a/.github/workflows/Testing.yml
+++ b/.github/workflows/Testing.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.6, 3.4, 3.3]
+        python-version: [3.6, 3.3]
 
     steps:
       - uses: actions/checkout@v2
