--- a/.github/workflows/Testing.yml
+++ b/.github/workflows/Testing.yml
@@ -19,9 +19,10 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install unittest2
+          pip install PyCrypto
+          pip install zlib
       - name: run unit tests
         run: |
           pip install pytest
-          pip install pytest-cov
-          pytest tests/test_roundtrip.py --cov=com --cov-report=xml
+          pytest tests/test_roundtrip.py
