--- a/.github/workflows/Testing.yml
+++ b/.github/workflows/Testing.yml
@@ -17,9 +17,10 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
       - name: Install dependencies
+        working-directory: ./tests
         run: |
           python -m pip install --upgrade pip
+          
       - name: run unit tests
         run: |
-          pip install pytest
-          pytest tests/
+          python -m tests/round
