--- a/.github/workflows/Testing.yml
+++ b/.github/workflows/Testing.yml
@@ -20,6 +20,7 @@ jobs:
         working-directory: ./tests
         run: |
           python -m pip install --upgrade pip
+          pip install pytest
           
       - name: run unit tests
         run: |
