--- a/.github/workflows/Testing.yml
+++ b/.github/workflows/Testing.yml
@@ -17,11 +17,11 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
       - name: Install dependencies
-        working-directory: tests/
         run: |
           python -m pip install --upgrade pip
           pip install pytest
           
       - name: run unit tests
+        working-directory: tests/
         run: |
-          python -m test_roundtrip.py
+          pytest
