--- a/.github/workflows/Testing.yml
+++ b/.github/workflows/Testing.yml
@@ -24,4 +24,4 @@ jobs:
       - name: run unit tests
         working-directory: tests/
         run: |
-          pytest
+          pytest test_roundtrip.py
