--- a/.github/workflows/Testing.yml
+++ b/.github/workflows/Testing.yml
@@ -22,6 +22,5 @@ jobs:
           pip install pytest
           
       - name: run unit tests
-        working-directory: tests/
         run: |
-          pytest test_roundtrip.py
+          pytest
