--- a/.github/workflows/Testing.yml
+++ b/.github/workflows/Testing.yml
@@ -16,11 +16,8 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install pytest
-          
       - name: run unit tests
         run: |
+          python -m tests.test_pdfreaderinit
           python -m tests.test_pdfstring
+          python -m tests.test_pdfdict
