--- a/.github/workflows/Testing.yml
+++ b/.github/workflows/Testing.yml
@@ -18,6 +18,6 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: run unit tests
         run: |
-          python -m tests.test_pdfreaderinit
+          python -m tests.test_pdfreader_init
           python -m tests.test_pdfstring
           python -m tests.test_pdfdict
