many changes, update lots to python3, fix many tests, update ci, linter enable, requirments for setup

--- a/.gitignore
+++ b/.gitignore
@@ -56,6 +56,9 @@ htmlcov/
 .cache
 nosetests.xml
 coverage.xml
-
+tests/result.pickle
+tests/expected.pickle
+tests/tmp_results
 # Sphinx documentation
 docs/_build/
+.vscode/settings.json
