--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -10,26 +10,49 @@ on:
     types: [published]
 
 jobs:
-  deploy:
-
-    runs-on: ubuntu-latest
+  python_wheels:
+    runs-on: ${{ matrix.os }}
+    defaults:
+      run:
+        shell: bash
+    env:
+      OS: ${{ matrix.os }}
+      PYTHON: ${{ matrix.python-version }}
+      PYTHONIOENCODING: utf-8
+      PIP_DOWNLOAD_CACHE: ${{ github.workspace }}/../.pip_download_cache
     strategy:
+      fail-fast: true
       matrix:
-        python-version: [3.6, 3.7]
+        os: [ubuntu-20.04, macos-latest, windows-latest]
+        python-version: [3.6, 3.7, 3.8, 3.9]
+
     steps:
+    - name: Set git crlf/eol
+      run: |
+        git config --global core.autocrlf false
+        git config --global core.eol lf
     - uses: actions/checkout@v2
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v2
+      with:
+        fetch-depth: 0
+        submodules: true
+
+    - uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Install dependencies
+
+    - name: Add requirements
       run: |
         python -m pip install --upgrade pip
-        pip install build
-    - name: Build package
-      run: python -m build
-#    - name: Publish package
- #     uses: pypa/gh-action-pypi-publish@27b31702a0e7fc50959f5ad993c78deac1bdfc29
-  #    with:
-   #     user: __token__
-    #    password: ${{ secrets.PYPI_API_TOKEN }}
+        pip install tox tox-gh-actions
+    - name: Check for lint
+      run: |
+        tox -e lint
+    - name: Install and test
+      run: |
+        tox -e py
+    - name: Build dist pkgs
+      run: |
+        tox -e deploy
+    - name: Test wheels
+      run: |
+        tox -e check
