--- a/tox.ini
+++ b/tox.ini
@@ -74,4 +74,4 @@ commands_pre =
     pip install pdfrw --force-reinstall --pre --prefer-binary -f dist/
 
 commands =
-    pytest -v
+    pytest --cov=pdfrw --cov-report=xml --continue-on-collection-errors -v
