--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -12,6 +12,7 @@ on:
 jobs:
   python_wheels:
     runs-on: ${{ matrix.os }}
+    continue-on-error: true
     defaults:
       run:
         shell: bash
