--- a/tox.ini
+++ b/tox.ini
@@ -2,6 +2,7 @@
 envlist = py3{6,7,8,9}
 skip_missing_interpreters = true
 skipsdist=True
+minversion = 3.13.2
 
 [gh-actions]
 3.6 = py36
@@ -10,13 +11,13 @@ skipsdist=True
 3.9 = py39
 
 [testenv]
-passenv =
-    CI
-    OS
-    PIP_DOWNLOAD_CACHE
+; passenv =
+;     CI
+;     OS
+;     PIP_DOWNLOAD_CACHE
 
 setenv =
-  PYTHONPATH={toxinidir}
+    PYTHONPATH={toxinidir}/subdir
 
 deps =
     pip>=20.0.1
@@ -30,10 +31,10 @@ commands =
     pytest {posargs}
 
 [testenv:lint]
-passenv =
-    CI
-    OS
-    PIP_DOWNLOAD_CACHE
+; passenv =
+;     CI
+;     OS
+;     PIP_DOWNLOAD_CACHE
 
 deps =
     pip>=20.0.1
@@ -42,16 +43,16 @@ deps =
 commands = pylint --fail-under=7 pdfrw/
 
 [testenv:deploy]
-passenv =
-    pythonLocation
-    CI
-    PIP_DOWNLOAD_CACHE
+; passenv =
+;     pythonLocation
+;     CI
+;     PIP_DOWNLOAD_CACHE
 
-allowlist_externals = bash
+allowlist_externals = make /bin/bash
 
 deps =
     pip>=20.0.1
-    #git+https://github.com/freepn/gitchangelog@3.0.4-4
+    ; git+https://github.com/freepn/gitchangelog@3.0.4-4
 
 commands_pre = 
     python -m pip install -U pip wheel build twine
@@ -62,7 +63,7 @@ commands =
 
 [testenv:check]
 skip_install = true
-passenv = CI
+; passenv = CI
 
 deps =
     pip>=20.0.1
