--- a/tox.ini
+++ b/tox.ini
@@ -16,8 +16,8 @@ minversion = 3.13.2
 ;     OS
 ;     PIP_DOWNLOAD_CACHE
 
-setenv =
-    PYTHONPATH={toxinidir}/subdir
+; setenv =
+;     PYTHONPATH={toxinidir}/subdir
 
 deps =
     pip>=20.0.1
