--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -45,15 +45,5 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install tox tox-gh-actions
-    - name: Check for lint
-      run: |
-        tox -e lint
-    - name: Install and test
-      run: |
-        tox
-    - name: Build dist pkgs
-      run: |
-        tox -e deploy
-    - name: Test wheels
-      run: |
-        tox -e check
+    - name: Run tox-gh-actions
+
