--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -41,10 +41,16 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
 
-    - name: Add requirements
+    - name: Check for lint
       run: |
-        python -m pip install --upgrade pip
-        pip install tox tox-gh-actions
-    - name: Run tox-gh-actions
-      uses: ymyzk/run-tox-gh-actions@v0.1
+        tox -e lint
 
+    - name: Build dist pkgs
+      run: |
+        tox -e deploy
+    - name: Test wheels
+      run: |
+        tox -e check
+    - name: Install and test
+      run: |
+        tox -e py
