--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -40,11 +40,14 @@ jobs:
     - uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
-
+        
+    - name: Add requirements
+      run: |
+        python -m pip install --upgrade pip
+        pip install tox tox-gh-actions
     - name: Check for lint
       run: |
         tox -e lint
-
     - name: Build dist pkgs
       run: |
         tox -e deploy
