--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -45,12 +45,13 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install tox tox-gh-actions
+        pip install --prefer-binary -rrequirements-dev.txt
     - name: Check for lint
       run: |
         tox -e lint
     - name: Install and test
       run: |
-        tox
+        tox -e py
     - name: Build dist pkgs
       run: |
         tox -e deploy
