--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -40,22 +40,21 @@ jobs:
     - uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
-        
+
     - name: Add requirements
       run: |
         python -m pip install --upgrade pip
         pip install tox tox-gh-actions
-        pip install --prefer-binary -rrequirements-dev.txt
+        
     - name: Check for lint
       run: |
-        tox -e lint
+        tox -e -r lint
     - name: Install and test
       run: |
-        tox -e py
+        tox -e -r py
     - name: Build dist pkgs
       run: |
-        tox -e deploy
+        tox -e -r deploy
     - name: Test wheels
       run: |
-        tox -e check
-
+        tox -e -r check
