--- a/tox.ini
+++ b/tox.ini
@@ -21,7 +21,7 @@ minversion = 3.13.2
 
 deps =
     pip>=20.0.1
-
+    -rrequirements-dev.txt
 commands_pre = 
     python -m pip install -U pip wheel
     pip install --prefer-binary -rrequirements-dev.txt
