--- a/tox.ini
+++ b/tox.ini
@@ -3,6 +3,7 @@ envlist = py3{6,7,8,9}
 skip_missing_interpreters = true
 skipsdist=True
 minversion = 3.13.2
+sitepackages=True
 
 [gh-actions]
 3.6 = py36
@@ -21,7 +22,7 @@ minversion = 3.13.2
 
 deps =
     pip>=20.0.1
-    -rrequirements-dev.txt
+    
 commands_pre = 
     python -m pip install -U pip wheel
     pip install --prefer-binary -rrequirements-dev.txt
