--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,5 @@
 # Set default behaviour to automatically normalize line endings.
-* text=auto
+*.py text eol=crlf
 
 # Force batch scripts to always use CRLF line endings so that if a repo is
 # accessed in Windows via a file share from Linux, the scripts will work.
