--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -12,7 +12,7 @@ on:
 
 jobs:
   ci:
-    runs-on: macos-latest
+    runs-on: windows-latest
     strategy:
       matrix:
         python-version: [3.6]
