--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -1,31 +1,31 @@
-# This workflow will attempt to build a Python Package using pip to test if it is buildable
-
-name: Test Build
+name: Test
 
 on:
   push:
     branches:
-      - master
-      - rileym666-patch-1
-  release:
-    types: [published]
+      -master
+      -development
+      -rileym666-patch-1
 
 jobs:
   ci:
-    runs-on: windows-latest
+    runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        python-version: [3.6]
+        os: [ubuntu-20.04, macos-latest, windows-latest]
+        python-version: [3.6, 3.7, 3.8, 3.9]
 
     steps:
       - uses: actions/checkout@v2
       - name: Python setup
         uses: actions/setup-python@v2
-        with:
-          python-version: ${{ matrix.python-version }}
+      - name: Add requirements
+        run: |
+          python -m pip install --upgrade pip
+          pip install coverage
+          pip install unittest
+          with:
+            python-version: ${{ matrix.python-version }}
       - name: run unit tests
         run: |
-          python -m tests.test_pdfreader_init
-          python -m tests.test_pdfstring
-          python -m tests.test_pdfdict
-          python -m tests.test_roundtrip
+          coverage run -m unittest discover
