--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -1,6 +1,7 @@
 name: Test
 
 on:
+  workflow_dispatch:
   push:
     branches:
       -master
@@ -8,13 +9,14 @@ on:
       -rileym666-patch-1
 
 jobs:
-  ci:
+  python_wheels:
+    runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: true
       matrix:
         os: [ubuntu-20.04, macos-latest, windows-latest]
-        python-version: [3.6, 3.7, 3.8, 3.9]
-    runs-on: ${{ matrix.os }}
+        python-version: [3.6.2, 3.7, 3.8, 3.9]
+
 
     steps:
       - uses: actions/checkout@v2
