--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -25,7 +25,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install coverage
-          pip install unittest
+          pip install unittest2
           with:
             python-version: ${{ matrix.python-version }}
       - name: run unit tests
