--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -25,8 +25,8 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install coverage
-          with:
-            python-version: ${{ matrix.python-version }}
+          pip install unittest2
+
       - name: run unit tests
         run: |
           coverage run -m unittest discover
