--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -13,8 +13,8 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        os: [ubuntu-20.04, macos-latest, windows-latest]
-        python-version: [3.6.2, 3.7, 3.8, 3.9]
+        os: [ubuntu-20.04, windows-latest]
+        python-version: [3.6.2]
 
 
     steps:
